k8s/notify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-deployment
  namespace: default
  labels:
    app: notify
spec:
  selector:
    matchLabels:
      app: notify
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: notify
    spec:
      containers:
      - name: notify-container
        image: kka01/timeshaasan-notify:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 250m
            memory: 200Mi
        livenessProbe:
          tcpSocket:
            port: 5005
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /working
            port: 5005
          initialDelaySeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 5005
          name: notify-port
---

apiVersion: v1
kind: Service
metadata:
  name: notify-service
  namespace: default
spec:
  selector:
    app: notify
  ports:
  - name: notify-port
    protocol: TCP
    port: 5005
    targetPort: 5005
